// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> Default story renders snapshot 1`] = `
<label
  class="label"
>
  Label
   
</label>
`;

exports[`<Label /> LabelAfter story renders snapshot 1`] = `
<label
  class="label"
>
  Label
   
  <span
    class="text text--body-sm"
  >
    <span>
      *
    </span>
  </span>
</label>
`;
